# rsfetch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  fetch  fetch-bash  main.rs  makefile  rsfetch.1  term
Pre-Built Binary/: fetch
fetch-rust/: Cargo.toml
fetch-rust/src/: main.rs
specs/: 2.md
src/: '  args.yml  cpu.rs  device.rs  distro.rs  env.rs  hostname.rs  kernel.rs  main.rs  memory.rs  music.rs  network.rs  output.rs  pkgs.rs  terminal.rs  uptime.rs  util.rs  wmde.rs
