[package]
name = "rsfetch"
version = "1.8.0"
authors = ["Phate6660 <ValleyKnight@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bytecount = "0.5"
clap = "2.33"
dirs = "1.0"
itoa = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
prettytable-rs = "0.8"
pwd = "1.3"
reqwest = "0.9"
snafu = "0.3"
uptime_lib = "0.1"
