[package]
name = "rsfetch"
version = "2.0.0"
authors = ["Phate6660 <ValleyKnight@protonmail.com>"]
edition = "2018"
description = "A neofetch-esque tool written in Rust."
homepage = "https://github.com/rsfetch/rsfetch"
license = "MIT"

[dependencies]
libc = "0.2.66"
clap = "^2.33"
dirs = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
prettytable-rs = "0.8"
hyper = "0.13"
tokio = { version = "0.2", default-features = false, features = ["macros"] }
snafu = "0.3"
